<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SuggestedRecipesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSuggestedRecipesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggested_recipes_title"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSuggestedRecipesDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/suggested_recipes_description"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textNoMatchingRecipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/no_matching_recipes"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggestedRecipesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:nestedScrollingEnabled="false"
            android:paddingBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textAlmostThereTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingTop="10dp"
            android:text="@string/almost_there_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textAlmostThereDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/almost_there_description"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textNoAlmostThereRecipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/no_almost_there_recipes"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/almostThereRecipesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="100dp"
            android:nestedScrollingEnabled="false"
            android:paddingBottom="8dp"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>